--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #E5E5E5;
+}
+
 main {
     font-family: "Montserrat", sans-serif;
     display: flex;
@@ -5,10 +9,136 @@ main {
     background-color: #E5E5E5;
     width: 1200px;
     margin: 0 auto;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
 
 .main-content{
     background-color: white;
+    padding: 105px 90px;
+}
+
+.about{
+    margin-bottom: 40px;
+}
+
+.about h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 20px;
+}
+
+.about h1{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 55px;
+}
+
+.about p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+    width: 400px;
+}
+
+.progects{
+    margin-bottom: 50px;
+}
+
+.title{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 10px;
+}
+
+ol li{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+ol{
+    padding: 0;
+    margin-left: 15px;
+}
+
+li a,.tech-name{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+}
+
+li a{
+    margin-left: 10px;
+}
+
+.work h4{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.work h4 span{
+    color: #FB6D3A;
+}
+
+.work,.education p{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #A8A8A8;
+    margin-bottom: 10px;
+}
+
+.work,.education p span{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #000;
+    margin: 0 5px;
+}
+
+.work ul{
+    padding: 0;
+    margin-left: 15px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #595959;
+}
+
+.education h4{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FB6D3A;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.education h5{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 aside {
